# agent_platform_api/routers/__init__.py
@@ -1,11 +1,13 @@
-from . import agents, commenting, core, platform_meta, platform_runtime, prompt_center, tool_center
+from . import agents, commenting, core, labeling, platform_meta, platform_runtime, prompt_center, schema_center, tool_center
 
 __all__ = [
     "agents",
     "commenting",
     "core",
+    "labeling",
     "platform_meta",
     "platform_runtime",
     "prompt_center",
+    "schema_center",
     "tool_center",
 ]
